--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ body ul {
 body .top {
   height: 500px;
   background-position: center;
-  background-image: url(img/fitzroy.jpg);
+  background-image: url(fitzroy.jpg);
   background-size: cover;
   color: white;
 }
