--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ body{
     .top{
         height: auto;
         background-position: center;
-        background-image: url(img/fitzroy.jpg);
+        background-image: url(fitzroy.jpg);
         background-size: cover;
         color:white;
 
