--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-    color:blue;
+    color:#333;
     font-family: "Montserrat","游ゴシック","YuGothic","ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ",;
     
     ul{list-style: none;}
