--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,12 +27,11 @@ body{
     }
 }
 
-    // top/
 
     .top{
         height: auto;
         background-position: center;
-        background-image: url(img/fitzroy.jpg);
+        background-image: url(fitzroy.jpg);
         background-size: cover;
         color:white;
 
@@ -48,6 +47,7 @@ body{
 
            h1{
                font-size: 60px;
+               color:green;
   
                }
          }
@@ -59,7 +59,6 @@ body{
 
 
 
-    // top/
 
 
 
@@ -71,6 +70,7 @@ body{
         .skills{
 
             .fab-icon{
+                background-color:yellow;
                 padding-top:30px;
                 padding-left:50px;
             .fab{
