--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,23 +136,19 @@ body{
                  
     
     
+   
     
-    // contact/
-    
-    #contact-form{
+    .contact-section{
         height:auto;
         color:red;
 
         h3{
             padding:30px 0 15px;   
-            border-bottom:3px solid yellow;
-        }
+            border-bottom:3px solid yellow;        }
 
         p{
             padding-top:20px;
                     color:blue;
-
-
         }
 
 
@@ -178,11 +174,8 @@ body{
             width:100px;
             letter-spacing: 0.25rem;
                     color:orange;
-
-
-
-
-        &:hover{
+            
+            &:hover{
             background-color: rgb(124, 124, 124);
             color:brown;
             transition:all 0.4s;
