--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,28 +62,6 @@ body{
 
 
 
-// about/
-    .about{
-        height:auto;
-    
-
-        .skills{
-
-            .fab-icon{
-                background-color:yellow;
-                padding-top:30px;
-                padding-left:50px;
-            .fab{
-                width:30%;
-                float:left;
-                line-height: 3rem;
-            }
-            p{font-size:20px;
-            }
-        }
-        }
-    
-        }
 
 
     //    works/
@@ -135,55 +113,29 @@ body{
                      }
                  
     
-    
-   
+   //contact/
     
     .contact-section{
         height:auto;
-        color:red;
-
-        h3{
-            padding:30px 0 15px;   
-            border-bottom:3px solid yellow;        }
-
-        p{
-            padding-top:20px;
-                    color:blue;
-        }
-
-
-        .contact-submit{
-            width:400px;
-            height:40px;
-            border:1px solid green;
-
-        }
-        textarea{
-            width:400px;
-            height:200px;
-            border:1px solid pink !important;
-
-
-        }
-
-        .contact-button{
-            margin: 10px;
-            text-align: center;
-            font-weight: bold;
-            border-radius:25px;
-            width:100px;
-            letter-spacing: 0.25rem;
-                    color:orange;
-            
-            &:hover{
-            background-color: rgb(124, 124, 124);
-            color:brown;
-            transition:all 0.4s;
-        }
-        }
+        background-color:pink;
         
-
+    
+        .section-title{
+            color:yellow:}
+        
+        .contact-submit{
+             width:400px;
+	         height:40px;
+	        border:1px solid green;
+	
+          }
+        
+        
+        
     }
+    
+    
+
        
 
         // footer/
