--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ body{
     font-family: "Montserrat","游ゴシック","YuGothic","ヒラギノ角ゴ ProN W3","Hiragino Kaku Gothic ProN","メイリオ",;
    
 
-    color:#333;
+    color:red;
     width:100%;
     margin:0 auto;
 
@@ -15,7 +15,7 @@ ul{list-style: none;
     
 }
 
-a{color:#333;
+a{color:yellow;
     text-decoration: none;
 
     &:hover{
@@ -32,7 +32,7 @@ a{color:#333;
    .navi{
        padding:20 30;
        height:70px;
-       background-color:#fff;
+       background-color:green;
 
 
 
@@ -99,7 +99,7 @@ a{color:#333;
             font-weight: bold;
             line-height: 100px;
             margin:0 auto;
-            border-color: white;
+            border-color: blue;
             border-style: solid;
             border-width: 10px;
             border-collapse: collapse;
@@ -198,7 +198,7 @@ text-align: center;
 
             a{display: inline-block;
             padding: 10px 24px;
-            color: white;
+            color: pink;
             background-color:black;
             cursor:pointer;
             transition:all 0.3s;
@@ -245,7 +245,7 @@ text-align: center;
 
 
 .services-text{
-    color:white;
+    color:orange;
     font-weight: bold;
     text-align: left;
 
@@ -278,7 +278,7 @@ text-align: center;
     height:650px;
     width:100%;
     padding-top:100px;
-    background-color:#f6f6f6;
+    background-color:purple;
 
        .bottom-wrapper{
 
